manifests/mapping-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mappingservice
spec:
  selector:
    matchLabels:
      app: mappingservice
  template:
    metadata:
      labels:
        app: mappingservice
    spec:
      containers:
      - name: mappingservice
        image: mappingservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
