manifests/pricing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricingservice
spec:
  selector:
    matchLabels:
      app: pricingservice
  template:
    metadata:
      labels:
        app: pricingservice
    spec:
      containers:
      - name: pricingservice
        image: pricingservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50003
