manifests/trip-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripservice
spec:
  selector:
    matchLabels:
      app: tripservice
  template:
    metadata:
      labels:
        app: tripservice
    spec:
      containers:
      - name: tripservice
        image: tripservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50001
