manifests/mapping-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mappingservice
spec:
  type: ClusterIP
  selector:
    app: mappingservice
  ports:
  - port: 50002
    targetPort: 80
