manifests/pricing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pricingservice
spec:
  type: ClusterIP
  selector:
    app: pricingservice
  ports:
  - port: 50003
    targetPort: 50003
