manifests/trip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tripservice
spec:
  type: ClusterIP
  selector:
    app: tripservice
  ports:
  - port: 50001
    targetPort: 50001
